--- a/TareasAPP/TareasAPP/TareasAPP.iOS/Info.plist
+++ b/TareasAPP/TareasAPP/TareasAPP.iOS/Info.plist
@@ -48,5 +48,7 @@
     </array>
     <key>UILaunchStoryboardName</key>
     <string>LaunchScreen</string>
+    <key>NSCalendarsUsageDescription</key>
+    <string>Necesitamos acceder al calendario para crear eventos.</string>
   </dict>
 </plist>
